[gd_scene load_steps=25 format=2]

[ext_resource path="res://game/units/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0030.PNG" type="Texture" id=2]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0026.PNG" type="Texture" id=3]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0022.PNG" type="Texture" id=4]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0031.PNG" type="Texture" id=5]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0029.PNG" type="Texture" id=6]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0023.PNG" type="Texture" id=7]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0024.PNG" type="Texture" id=8]
[ext_resource path="res://assets/sprites/health-bar.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0025.PNG" type="Texture" id=10]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0027.PNG" type="Texture" id=11]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0028.PNG" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/magnet ship 5.png" type="Texture" id=13]
[ext_resource path="res://game/units/MagnetArea2D.gd" type="Script" id=14]
[ext_resource path="res://assets/sprites/player/magnet ship 6.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/magnet ship 4.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/magnet ship 2.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/magnet ship 3.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/magnet ship 1.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 17 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.9033, 32.048 )

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 72.0167

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 17.0
} ]

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 241.963

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stay"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.479698, -0.707108 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="hp_circle" type="Sprite" parent="."]
position = Vector2( 1.48345, -9.96199 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 9 )

[node name="MagnetArea2D" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea2D"]
position = Vector2( 1.78383, -0.51897 )
shape = SubResource( 3 )

[node name="MagnetSprite" type="AnimatedSprite" parent="MagnetArea2D"]
visible = false
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -5.99317, 191.958 )
scale = Vector2( 1.80181, 1.87834 )
frames = SubResource( 4 )
frame = 1
offset = Vector2( 0, -100 )

[node name="AttachArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttachArea2D"]
position = Vector2( 0, 4.23785 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = -23.799
margin_top = 73.5391
margin_right = 16.201
margin_bottom = 87.5391
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="MagnetArea2D" to="MagnetArea2D" method="_on_MagnetArea2D_body_entered"]
[connection signal="body_exited" from="MagnetArea2D" to="MagnetArea2D" method="_on_MagnetArea2D_body_exited"]
[connection signal="body_entered" from="AttachArea2D" to="." method="_on_Area2D_body_entered"]
